add animated and chnage same component

--- a/blog.html
+++ b/blog.html
@@ -20,8 +20,7 @@
                                 class="w-4 h-4 text-gray-800" width="24" height="24" viewBox="0 0 24 24"
                                 xmlns="http://www.w3.org/2000/svg">
                                 <title>Toggle Menu</title>
-                                <path class=" toggle-nav hidden" fill-rule="evenodd"
-                                    clip-rule="evenodd"
+                                <path class=" toggle-nav hidden" fill-rule="evenodd" clip-rule="evenodd"
                                     d="M18.278 16.864a1 1 0 01-1.414 1.414l-4.829-4.828-4.828 4.828a1 1 0 01-1.414-1.414l4.828-4.829-4.828-4.828a1 1 0 011.414-1.414l4.829 4.828 4.828-4.828a1 1 0 111.414 1.414l-4.828 4.829 4.828 4.828z">
                                 </path>
                                 <path class=" toggle-nav" fill-rule="evenodd"
