--- a/about.html
+++ b/about.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Contact</title>
     <link rel="stylesheet" href="./css/style.css">
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
 </head>
 
 <body>
@@ -21,8 +22,7 @@
                                 class="w-4 h-4 text-gray-800" width="24" height="24" viewBox="0 0 24 24"
                                 xmlns="http://www.w3.org/2000/svg">
                                 <title>Toggle Menu</title>
-                                <path class=" toggle-nav hidden" fill-rule="evenodd"
-                                    clip-rule="evenodd"
+                                <path class=" toggle-nav hidden" fill-rule="evenodd" clip-rule="evenodd"
                                     d="M18.278 16.864a1 1 0 01-1.414 1.414l-4.829-4.828-4.828 4.828a1 1 0 01-1.414-1.414l4.828-4.829-4.828-4.828a1 1 0 011.414-1.414l4.829 4.828 4.828-4.828a1 1 0 111.414 1.414l-4.828 4.829 4.828 4.828z">
                                 </path>
                                 <path class=" toggle-nav" fill-rule="evenodd"
@@ -225,13 +225,13 @@
             </div>
         </div>
         <div class="grid sm:grid-cols-2 gap-10 mx-auto mt-24">
-            <div class="relative">
+            <div class="relative" data-aos="fade-right">
                 <div class="absolute hidden md:block w-96 h-96 bg-purple-100 rounded-full right-0 top-1/3"></div>
                 <div class="absolute hidden md:block w-44 h-44 bg-purple-100 rounded-full left-10 top-1/4"></div>
                 <img src="./img/ourmissonimg.avif"
                     class="rounded-xl w-full max-w-md mx-auto shadow-2xl z-10 relative" />
             </div>
-            <div class=" place-self-center">
+            <div class=" place-self-center" data-aos="fade-left">
                 <h2 class="text-5xl text-gray-800 tracking-tight -mt-2"><span class="text-indigo-600">Our</span>
                     <strong>Mission</strong>
                 </h2>
@@ -267,7 +267,7 @@
             </p>
         </div>
         <div class="grid md:grid-cols-4 gap-10 mx-auto mt-12">
-            <div class="group">
+            <div class="group" data-aos="fade-right">
                 <div class="w-full aspect-square">
                     <img src="./img/teamimg1.avif"
                         class="w-full h-full object-cover bg-white rounded transition group-hover:-translate-y-1 group-hover:shadow-xl" />
@@ -277,7 +277,7 @@
                     <h3 class="text-sm text-slate-500">Chief Sales Officer</h3>
                 </div>
             </div>
-            <div class="group">
+            <div class="group" data-aos="fade-up">
                 <div class="w-full aspect-square">
                     <img src="./img/teamimg2.avif"
                         class="w-full h-full object-cover bg-white rounded transition group-hover:-translate-y-1 group-hover:shadow-xl" />
@@ -287,7 +287,7 @@
                     <h3 class="text-sm text-slate-500">Senior Director</h3>
                 </div>
             </div>
-            <div class="group">
+            <div class="group" data-aos="fade-down">
                 <div class="w-full aspect-square">
                     <img src="./img/teamimg3.avif"
                         class="w-full h-full object-cover bg-white rounded transition group-hover:-translate-y-1 group-hover:shadow-xl" />
@@ -297,7 +297,7 @@
                     <h3 class="text-sm text-slate-500">Principal Strategist</h3>
                 </div>
             </div>
-            <div class="group">
+            <div class="group" data-aos="fade-left">
                 <div class="w-full aspect-square">
                     <img src="./img/teamimg4.avif"
                         class="w-full h-full object-cover bg-white rounded transition group-hover:-translate-y-1 group-hover:shadow-xl" />
@@ -402,6 +402,7 @@
 
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
     <script src="./js/main.js"></script>
 </body>
 
