--- a/features.html
+++ b/features.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>features</title>
     <link rel="stylesheet" href="./css/style.css">
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
 </head>
 
 <body>
@@ -21,8 +22,7 @@
                                 class="w-4 h-4 text-gray-800" width="24" height="24" viewBox="0 0 24 24"
                                 xmlns="http://www.w3.org/2000/svg">
                                 <title>Toggle Menu</title>
-                                <path class=" toggle-nav hidden" fill-rule="evenodd"
-                                    clip-rule="evenodd"
+                                <path class=" toggle-nav hidden" fill-rule="evenodd" clip-rule="evenodd"
                                     d="M18.278 16.864a1 1 0 01-1.414 1.414l-4.829-4.828-4.828 4.828a1 1 0 01-1.414-1.414l4.828-4.829-4.828-4.828a1 1 0 011.414-1.414l4.829 4.828 4.828-4.828a1 1 0 111.414 1.414l-4.828 4.829 4.828 4.828z">
                                 </path>
                                 <path class=" toggle-nav" fill-rule="evenodd"
@@ -112,10 +112,10 @@
         </p>
     </div>
     <div class="grid md:grid-cols-2 py-10">
-        <div class="grid place-items-center">
+        <div class="grid place-items-center" data-aos="fade-right">
             <img src="./img/img-2.avif">
         </div>
-        <div class="grid place-items-center">
+        <div class="grid place-items-center" data-aos="fade-left">
             <div class="max-w-lg"><span
                     class="bg-purple-100 border-purple-200 border text-purple-600 -ml-px rounded-full text-xs font-medium px-3 py-1 ">Simplified
                     Workflows</span>
@@ -162,10 +162,10 @@
         </div>
     </div>
     <div class="grid md:grid-cols-2 py-10">
-        <div class="grid place-items-center pb-10 md:pb-0 md:order-2">
+        <div class="grid place-items-center pb-10 md:pb-0 md:order-2" data-aos="fade-left">
             <img src="./img/img-3.avif">
         </div>
-        <div class="grid place-items-center">
+        <div class="grid place-items-center" data-aos="fade-right">
             <div class="max-w-lg"><span
                     class="bg-purple-100 border-purple-200 border text-purple-600 -ml-px rounded-full text-xs font-medium px-3 py-1 ">AI-Powered
                     Insights</span>
@@ -222,7 +222,7 @@
             </p>
         </div>
         <div class="grid md:grid-cols-2 lg:grid-cols-5 mt-16 gap-10">
-            <div
+            <div data-aos="zoom-in"
                 class="rounded-2xl p-8 bg-gray-50 transition-all ring-1 ring-gray-200/50 shadow hover:shadow-lg lg:col-span-3">
                 <div class="overflow-hidden flex items-start justify-center h-auto relative lg:h-80">
                     <div class="absolute inset-0 bg-gradient-to-t from-gray-50 via-transparent z-10"></div>
@@ -237,7 +237,7 @@
                         </span></p>
                 </div>
             </div>
-            <div
+            <div data-aos="zoom-out"
                 class="rounded-2xl p-8 bg-gray-50 transition-all ring-1 ring-gray-200/50 shadow hover:shadow-lg lg:col-span-2">
                 <div class="overflow-hidden flex items-start justify-center h-auto relative lg:h-80">
                     <div class="absolute inset-0 bg-gradient-to-t from-gray-50 via-transparent z-10"></div>
@@ -253,7 +253,8 @@
             </div>
         </div>
         <div class="grid md:grid-cols-2 lg:grid-cols-3 mt-10 gap-10">
-            <div class="rounded-2xl p-8 bg-gray-50 transition-all ring-1 ring-gray-200/50 shadow hover:shadow-lg">
+            <div class="rounded-2xl p-8 bg-gray-50 transition-all ring-1 ring-gray-200/50 shadow hover:shadow-lg"
+                data-aos="fade-right">
                 <div class="overflow-hidden flex items-start justify-center h-auto relative lg:h-60">
                     <div class="absolute inset-0 bg-gradient-to-t from-gray-50 via-transparent z-10"></div>
                     <img src="./img/customerneedimg-3.avif">
@@ -265,7 +266,8 @@
                             Feeling old? Try this template and be a part of the modern design.</span></p>
                 </div>
             </div>
-            <div class="rounded-2xl p-8 bg-gray-50 transition-all ring-1 ring-gray-200/50 shadow hover:shadow-lg">
+            <div class="rounded-2xl p-8 bg-gray-50 transition-all ring-1 ring-gray-200/50 shadow hover:shadow-lg"
+                data-aos="fade-up">
                 <div class="overflow-hidden flex items-start justify-center h-auto relative lg:h-60">
                     <div class="absolute inset-0 bg-gradient-to-t from-gray-50 via-transparent z-10"></div>
                     <img src="./img/customerneedimg-4.avif">
@@ -277,7 +279,8 @@
                             You can highlight your features in a trendy grid like this one.</span></p>
                 </div>
             </div>
-            <div class="rounded-2xl p-8 bg-gray-50 transition-all ring-1 ring-gray-200/50 shadow hover:shadow-lg">
+            <div class="rounded-2xl p-8 bg-gray-50 transition-all ring-1 ring-gray-200/50 shadow hover:shadow-lg"
+                data-aos="fade-left">
                 <div class="overflow-hidden flex items-start justify-center h-auto relative lg:h-60">
                     <div class="absolute inset-0 bg-gradient-to-t from-gray-50 via-transparent z-10"></div> <img
                         src="./img/customerneedimg-5.svg">
@@ -303,7 +306,7 @@
             </p>
         </div>
         <div class="grid sm:grid-cols-2 md:grid-cols-3 mt-16 gap-8 md:gap-16">
-            <div
+            <div data-aos="zoom-in"
                 class="flex flex-col gap-4 items-start group hover:bg-slate-50 hover:border-slate-100 border border-transparent rounded-lg transition-all md:-m-5 p-5">
                 <div
                     class="mt-1 bg-indigo-50 border shadow shadow-indigo-100/50 border-indigo-100 transition-colors rounded-lg grid place-items-center  p-2 w-10 h-10 shrink-0">
@@ -320,7 +323,7 @@
                         components, or just plain ol' HTML + JavaScript.</p>
                 </div>
             </div>
-            <div
+            <div data-aos="zoom-in"
                 class="flex flex-col gap-4 items-start group hover:bg-slate-50 hover:border-slate-100 border border-transparent rounded-lg transition-all md:-m-5 p-5">
                 <div
                     class="mt-1 bg-indigo-50 border shadow shadow-indigo-100/50 border-indigo-100 transition-colors rounded-lg grid place-items-center  p-2 w-10 h-10 shrink-0">
@@ -337,7 +340,7 @@
                         removing all JavaScript from your final build by default.</p>
                 </div>
             </div>
-            <div
+            <div data-aos="zoom-in"
                 class="flex flex-col gap-4 items-start group hover:bg-slate-50 hover:border-slate-100 border border-transparent rounded-lg transition-all md:-m-5 p-5">
                 <div
                     class="mt-1 bg-indigo-50 border shadow shadow-indigo-100/50 border-indigo-100 transition-colors rounded-lg grid place-items-center  p-2 w-10 h-10 shrink-0">
@@ -354,7 +357,7 @@
                         interactive components when they become visible on the page. </p>
                 </div>
             </div>
-            <div
+            <div data-aos="zoom-in"
                 class="flex flex-col gap-4 items-start group hover:bg-slate-50 hover:border-slate-100 border border-transparent rounded-lg transition-all md:-m-5 p-5">
                 <div
                     class="mt-1 bg-indigo-50 border shadow shadow-indigo-100/50 border-indigo-100 transition-colors rounded-lg grid place-items-center  p-2 w-10 h-10 shrink-0">
@@ -371,7 +374,7 @@
                         Sass, Tailwind, Markdown, MDX, and any other npm packages.</p>
                 </div>
             </div>
-            <div
+            <div data-aos="zoom-in"
                 class="flex flex-col gap-4 items-start group hover:bg-slate-50 hover:border-slate-100 border border-transparent rounded-lg transition-all md:-m-5 p-5">
                 <div
                     class="mt-1 bg-indigo-50 border shadow shadow-indigo-100/50 border-indigo-100 transition-colors rounded-lg grid place-items-center  p-2 w-10 h-10 shrink-0">
@@ -388,7 +391,7 @@
                         collections take the pain out of SEO and syndication. It just works!</p>
                 </div>
             </div>
-            <div
+            <div data-aos="zoom-in"
                 class="flex flex-col gap-4 items-start group hover:bg-slate-50 hover:border-slate-100 border border-transparent rounded-lg transition-all md:-m-5 p-5">
                 <div
                     class="mt-1 bg-indigo-50 border shadow shadow-indigo-100/50 border-indigo-100 transition-colors rounded-lg grid place-items-center  p-2 w-10 h-10 shrink-0">
@@ -501,6 +504,7 @@
 
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
     <script src="./js/main.js"></script>
 </body>
 
