--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>index</title>
     <link rel="stylesheet" href="./css/style.css">
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
 </head>
 
 <body>
@@ -106,7 +107,7 @@
             <main class="grid lg:grid-cols-5 place-items-center relative">
                 <div class="absolute w-96 h-96 blur-2xl -z-10 bg-gradient-radial from-indigo-200 right-0 top-0"></div>
                 <div class="absolute w-96 h-96 blur-2xl -z-10 bg-gradient-radial from-purple-200 right-56 top-10"></div>
-                <div class="max-w-sm md:max-w-max lg:col-span-2">
+                <div class="max-w-sm md:max-w-max lg:col-span-2" data-aos="fade-right">
                     <h1
                         class="text-3xl lg:text-4xl xl:text-6xl font-bold lg:tracking-tight xl:tracking-tighter [text-wrap:balance] text-center lg:text-start">
                         Create websites with Astroship™
@@ -124,7 +125,7 @@
                             Free Version
                         </a></div>
                 </div>
-                <div class="py-3 lg:col-span-3 lg:-mr-44">
+                <div class="py-3 lg:col-span-3 lg:-mr-44" data-aos="fade-left">
                     <img src="./img/heroimg.avif" loading="eager" fetchpriority="high" width="1183" height="787"
                         decoding="async">
                 </div>
@@ -254,10 +255,10 @@
             </p>
         </div>
         <div class="grid md:grid-cols-2 py-10">
-            <div class="grid place-items-center">
+            <div class="grid place-items-center" data-aos="fade-right">
                 <img src="./img/img-2.avif">
             </div>
-            <div class="grid place-items-center">
+            <div class="grid place-items-center" data-aos="fade-left">
                 <div class="max-w-lg"><span
                         class="bg-purple-100 border-purple-200 border text-purple-600 -ml-px rounded-full text-xs font-medium px-3 py-1 ">Simplified
                         Workflows</span>
@@ -302,10 +303,10 @@
             </div>
         </div>
         <div class="grid md:grid-cols-2 py-10">
-            <div class="grid place-items-center pb-10 md:pb-0 md:order-2">
+            <div class="grid place-items-center pb-10 md:pb-0 md:order-2" data-aos="fade-left">
                 <img src="./img/img-3.avif">
             </div>
-            <div class="grid place-items-center">
+            <div class="grid place-items-center" data-aos="fade-right">
                 <div class="max-w-lg"><span
                         class="bg-purple-100 border-purple-200 border text-purple-600 -ml-px rounded-full text-xs font-medium px-3 py-1 ">AI-Powered
                         Insights</span>
@@ -638,7 +639,7 @@
             </p>
         </div>
         <div class="grid md:grid-cols-2 lg:grid-cols-5 mt-16 gap-10">
-            <div
+            <div data-aos="fade-in"
                 class="rounded-2xl p-8 bg-gray-50 transition-all ring-1 ring-gray-200/50 shadow hover:shadow-lg lg:col-span-3">
                 <div class="overflow-hidden flex items-start justify-center h-auto relative lg:h-80">
                     <div class="absolute inset-0 bg-gradient-to-t from-gray-50 via-transparent z-10"></div>
@@ -653,7 +654,7 @@
                         </span></p>
                 </div>
             </div>
-            <div
+            <div data-aos="fade-out"
                 class="rounded-2xl p-8 bg-gray-50 transition-all ring-1 ring-gray-200/50 shadow hover:shadow-lg lg:col-span-2">
                 <div class="overflow-hidden flex items-start justify-center h-auto relative lg:h-80">
                     <div class="absolute inset-0 bg-gradient-to-t from-gray-50 via-transparent z-10"></div>
@@ -669,7 +670,8 @@
             </div>
         </div>
         <div class="grid md:grid-cols-2 lg:grid-cols-3 mt-10 gap-10">
-            <div class="rounded-2xl p-8 bg-gray-50 transition-all ring-1 ring-gray-200/50 shadow hover:shadow-lg">
+            <div class="rounded-2xl p-8 bg-gray-50 transition-all ring-1 ring-gray-200/50 shadow hover:shadow-lg"
+                data-aos="fade-left">
                 <div class="overflow-hidden flex items-start justify-center h-auto relative lg:h-60">
                     <div class="absolute inset-0 bg-gradient-to-t from-gray-50 via-transparent z-10"></div>
                     <img src="./img/customerneedimg-3.avif">
@@ -681,7 +683,8 @@
                             Feeling old? Try this template and be a part of the modern design.</span></p>
                 </div>
             </div>
-            <div class="rounded-2xl p-8 bg-gray-50 transition-all ring-1 ring-gray-200/50 shadow hover:shadow-lg">
+            <div class="rounded-2xl p-8 bg-gray-50 transition-all ring-1 ring-gray-200/50 shadow hover:shadow-lg"
+                data-aos="fade-up">
                 <div class="overflow-hidden flex items-start justify-center h-auto relative lg:h-60">
                     <div class="absolute inset-0 bg-gradient-to-t from-gray-50 via-transparent z-10"></div>
                     <img src="./img/customerneedimg-4.avif">
@@ -693,7 +696,8 @@
                             You can highlight your features in a trendy grid like this one.</span></p>
                 </div>
             </div>
-            <div class="rounded-2xl p-8 bg-gray-50 transition-all ring-1 ring-gray-200/50 shadow hover:shadow-lg">
+            <div class="rounded-2xl p-8 bg-gray-50 transition-all ring-1 ring-gray-200/50 shadow hover:shadow-lg"
+                data-aos="fade-right">
                 <div class="overflow-hidden flex items-start justify-center h-auto relative lg:h-60">
                     <div class="absolute inset-0 bg-gradient-to-t from-gray-50 via-transparent z-10"></div> <img
                         src="./img/customerneedimg-5.svg">
@@ -719,7 +723,7 @@
             </p>
         </div>
         <div class="grid sm:grid-cols-2 md:grid-cols-3 mt-16 gap-8 md:gap-16">
-            <div
+            <div data-aos="zoom-in" data-aos-duration="1000"
                 class="flex flex-col gap-4 items-start group hover:bg-slate-50 hover:border-slate-100 border border-transparent rounded-lg transition-all md:-m-5 p-5">
                 <div
                     class="mt-1 bg-indigo-50 border shadow shadow-indigo-100/50 border-indigo-100 transition-colors rounded-lg grid place-items-center  p-2 w-10 h-10 shrink-0">
@@ -736,7 +740,7 @@
                         components, or just plain ol' HTML + JavaScript.</p>
                 </div>
             </div>
-            <div
+            <div data-aos="zoom-in" data-aos-duration="1300"
                 class="flex flex-col gap-4 items-start group hover:bg-slate-50 hover:border-slate-100 border border-transparent rounded-lg transition-all md:-m-5 p-5">
                 <div
                     class="mt-1 bg-indigo-50 border shadow shadow-indigo-100/50 border-indigo-100 transition-colors rounded-lg grid place-items-center  p-2 w-10 h-10 shrink-0">
@@ -753,7 +757,7 @@
                         removing all JavaScript from your final build by default.</p>
                 </div>
             </div>
-            <div
+            <div data-aos="zoom-in" data-aos-duration="1600"
                 class="flex flex-col gap-4 items-start group hover:bg-slate-50 hover:border-slate-100 border border-transparent rounded-lg transition-all md:-m-5 p-5">
                 <div
                     class="mt-1 bg-indigo-50 border shadow shadow-indigo-100/50 border-indigo-100 transition-colors rounded-lg grid place-items-center  p-2 w-10 h-10 shrink-0">
@@ -770,7 +774,7 @@
                         interactive components when they become visible on the page. </p>
                 </div>
             </div>
-            <div
+            <div data-aos="zoom-in" data-aos-duration="1000"
                 class="flex flex-col gap-4 items-start group hover:bg-slate-50 hover:border-slate-100 border border-transparent rounded-lg transition-all md:-m-5 p-5">
                 <div
                     class="mt-1 bg-indigo-50 border shadow shadow-indigo-100/50 border-indigo-100 transition-colors rounded-lg grid place-items-center  p-2 w-10 h-10 shrink-0">
@@ -787,7 +791,7 @@
                         Sass, Tailwind, Markdown, MDX, and any other npm packages.</p>
                 </div>
             </div>
-            <div
+            <div data-aos="zoom-in" data-aos-duration="1300"
                 class="flex flex-col gap-4 items-start group hover:bg-slate-50 hover:border-slate-100 border border-transparent rounded-lg transition-all md:-m-5 p-5">
                 <div
                     class="mt-1 bg-indigo-50 border shadow shadow-indigo-100/50 border-indigo-100 transition-colors rounded-lg grid place-items-center  p-2 w-10 h-10 shrink-0">
@@ -804,7 +808,7 @@
                         collections take the pain out of SEO and syndication. It just works!</p>
                 </div>
             </div>
-            <div
+            <div data-aos="zoom-in" data-aos-duration="1600"
                 class="flex flex-col gap-4 items-start group hover:bg-slate-50 hover:border-slate-100 border border-transparent rounded-lg transition-all md:-m-5 p-5">
                 <div
                     class="mt-1 bg-indigo-50 border shadow shadow-indigo-100/50 border-indigo-100 transition-colors rounded-lg grid place-items-center  p-2 w-10 h-10 shrink-0">
@@ -910,6 +914,7 @@
     </footer>
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
     <script src="./js/main.js"></script>
 </body>
 
